@@ -23,12 +23,12 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
-
 import com.csvreader.CsvReader;
 import com.csvreader.CsvWriter;
 
 public class AllTests {
 	public static void main(String[] args) throws Exception {
+		@SuppressWarnings("rawtypes")
 		Class testClass = AllTests.class;
 		ArrayList<Method> setups = new ArrayList<Method>();
 		ArrayList<Method> tearDowns = new ArrayList<Method>();
@@ -50,7 +50,8 @@ public class AllTests {
 
 		System.out.println("Starting all tests.");
 
-		Object instance = testClass.newInstance();
+		@SuppressWarnings("unchecked")
+		Object instance = testClass.getDeclaredConstructor().newInstance();
 
 		for (Method method : testClass.getDeclaredMethods()) {
 			int modifiers = method.getModifiers();
@@ -64,6 +65,7 @@ public class AllTests {
 						setup.invoke(instance, (Object[]) null);
 					}
 
+					@SuppressWarnings("rawtypes")
 					Class expectedException = testAnnotation.expected();
 
 					// can't for the life of me get eclipse to be able to
@@ -1585,6 +1587,7 @@ public class AllTests {
 		}
 	}
 
+	@SuppressWarnings("unused")
 	@Test
 	public void test89() throws Exception {
 		try {
@@ -1594,7 +1597,7 @@ public class AllTests {
 					"Parameter charset can not be null."), ex);
 		}
 	}
-
+	@SuppressWarnings("unused")
 	@Test
 	public void test90() throws Exception {
 		try {
@@ -1646,7 +1649,7 @@ public class AllTests {
 		Assert.assertEquals(test, reader.get(0));
 		reader.close();
 	}
-
+	@SuppressWarnings("unused")
 	@Test
 	public void test112() throws Exception {
 		try {
@@ -1656,7 +1659,7 @@ public class AllTests {
 			assertException(new IllegalArgumentException("Parameter fileName can not be null."), ex);
 		}
 	}
-
+	@SuppressWarnings("unused")
 	@Test
 	public void test113() throws Exception {
 		try {
@@ -1665,7 +1668,7 @@ public class AllTests {
 			assertException(new IllegalArgumentException("Parameter charset can not be null."), ex);
 		}
 	}
-
+	@SuppressWarnings("unused")
 	@Test
 	public void test114() throws Exception {
 		try {
@@ -2155,7 +2158,7 @@ public class AllTests {
 		Assert.assertFalse(reader.readRecord());
 		reader.close();
 	}
-
+	@SuppressWarnings("unused")
 	@Test
 	public void test149() throws Exception {
 		try
